<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_last_name_display">Last Name :</string>
    <string name="label_name">First Name</string>
    <string name="label_name_display">First Name :</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_birthday_display">Birthday :</string>
    <string name="label_birth_city">Birth city</string>
    <string name="label_birth_city_display">Birth city :</string>
    <string name="label_department_display">Department :</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_phone_display">Number :</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_call">Call</string>
    <string name="reset_action">Reset</string>
    <string name="pick_date">Pick Date</string>
    <string name="label_add_telephone">Add Phone</string>
    <string name="label_find_city_info">Find City Info</string>
    <string name="label_share_city_info">Share City Info</string>
    <string name="chooser_title_share_photo">Share this photo with</string>
    <string name="chooser_title_pick_date">Pick a date</string>
    <string name="label_validate">Validate</string>
    <string name="label_cancel">Cancel</string>
    <string name="pickDateActivity">PickDateActivity</string>
    <string name="label_choose_date">Click here to choose a date</string>
    <string name="button_take_photo">Take a photo</string>
    <string name="button_save_photo">Save</string>
    <string name="button_delete_photo">Delete</string>
</resources>