<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_height="30dp"
            android:layout_width="match_parent"/>

        <ImageView
            android:id="@+id/imageView_edit"
            android:src="@mipmap/ic_launcher"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_last_name"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_name"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_birthday"
                    android:textColorHint="#616161"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_birth_city"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_department"
            android:entries="@array/departments"
            android:layout_height="50dp"
            android:layout_width="match_parent">
        </Spinner>

        <LinearLayout
            android:id="@+id/layout_phones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/button_add_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_telephone" />

        <Button
            android:id="@+id/button_photo_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/button_take_photo" />

        <Button
            android:id="@+id/button_validate_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_validate" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>