<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_date_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/label_choose_date"
            />

        <Button
            android:id="@+id/button_validate_date_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_validate" />

        <Button
            android:id="@+id/button_cancel_date_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>