<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="20dp"
            android:background="@color/teal_200" >

            <TextView
                android:id="@+id/label_last_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/label_last_name_display"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_display_last_name"
                android:layout_toEndOf="@+id/label_last_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="20dp"
            android:background="@color/teal_200" >

            <TextView
                android:id="@+id/label_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/label_name_display"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_display_name"
                android:layout_toEndOf="@+id/label_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="20dp"
            android:background="@color/teal_200" >

            <TextView
                android:id="@+id/label_birthday"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/label_birthday_display"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_display_birthday"
                android:layout_toEndOf="@+id/label_birthday"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="20dp"
            android:background="@color/teal_200" >

            <TextView
                android:id="@+id/label_birth_city"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/label_birth_city_display"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_display_birth_city"
                android:layout_toEndOf="@+id/label_birth_city"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="20dp"
            android:background="@color/teal_200" >

            <TextView
                android:id="@+id/label_department"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/label_department_display"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tv_display_department"
                android:layout_toEndOf="@+id/label_department"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_phones_fragment_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/button_edit_fragment_display"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/label_edit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>